--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <aeta charset="UTF-8">
         <title>Barbearia Alura</title>
+        <link rel="stylesheet"href="style.css">
     </head>
     <boody>
          <h1>Sobre a Barbearia Alura</h1>
